<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/refresh"
            android:icon="@drawable/ic_action_refresh"
            android:showAsAction="always"
            android:title="@string/refresh_action">
    </item>

    <item
            android:id="@+id/show_my_location"
            android:icon="@drawable/ic_location_place"
            android:showAsAction="ifRoom"
            android:title="@string/show_my_location">
    </item>


    <item
            android:id="@+id/menu_search"
            android:title="@string/menu_search"
            android:icon="@drawable/ic_action_search"
            android:showAsAction="ifRoom|collapseActionView"
            android:actionViewClass="android.widget.SearchView"/>

    <item
            android:id="@+id/menu_signup"
            android:title="@string/menu_signup"
            android:icon="@drawable/abs__ic_clear"
            android:showAsAction="ifRoom"/>

    <item
            android:id="@+id/menu_signout"
            android:title="@string/menu_signout"
            android:icon="@drawable/abs__ic_clear"
            android:showAsAction="ifRoom"/>

</menu>